compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__app_file_is_written_when_package_is_compiled.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
assertion_line: 163
expression: app_file
---
{application, a_package, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, ['Elixir.SomeElixir',
               a_module,
               some_erl]},
    {registered, []}
]}.
