compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__dependency_defining_same_module_as_another_dependency.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
expression: output
---
error: Duplicate module

The module `a_module` is defined multiple times.

It is first defined by dependency `another_dependency`
It is defined a second time by dependency `a_dependency`
