compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__dependency_defining_same_module_as_root_package.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
expression: output
---
error: Duplicate module

The module `a_module` is defined multiple times.

It is first defined by dependency `dep1`
It is defined a second time at `/src/a_module.gleam`
Hint: consider renaming the `a_module` module in your project
