compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__different_packages_defining_duplicate_module.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
expression: output
---
error: Duplicate module

The module `a_module` is defined multiple times.

It is first defined by the package dep1
It is defined a second time by the package a_package
