compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__erlang_app_file_is_written_when_beam_bytecode_is_compiled.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
expression: app_file
---
{application, a_package, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [main]},
    {registered, []}
]}.
