compiler-core/src/build/package_compiler/snapshots/gleam_core__build__package_compiler__tests__same_package_defining_duplicate_module.snap
---
source: compiler-core/src/build/package_compiler/tests.rs
expression: output
---
error: Duplicate module

The module `a_module` is defined multiple times.

It is first defined at a_package/a_module.gleam
It is defined a second time at /src/a_module.gleam
